# OmniPok-Agent

./: .gitignore  Ilikejupyter.ipynb  README.md  classes_DemoUML.dot  classes_MyProject.dot  classes_OmnipokAgent.dot  packages_MyProject.dot  packages_OmnipokAgent.dot  pyproject.toml  requirements.txt  run_chainlit.py
applications/: __init__.py
applications/api/: __init__.py  main.py  routes.py
applications/services/: __init__.py  agent_service.py
applications/static/: README.md  index.html
applications/ui/: __init__.py  chainlit_app.py  chainlit_main.py
config/: agents.json.example
docs/: langgraph_orchestration_plan.md
examples/: chat.ipynb  langgraph_orchestration_example.py  memory_example.py  rag_example.py  simple_agent_example.py  test.ipynb
omnipok_agent/: __init__.py
omnipok_agent/agents/: __init__.py  chat_agent.py  code_agent.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  support_agent.py  text_agent.py
omnipok_agent/config/: __init__.py  agent_config.py
omnipok_agent/core/: __init__.py  base.py  context.py  exceptions.py  types.py
omnipok_agent/llm/: __init__.py  omnipok_llm.py
omnipok_agent/memory/: README.md  __init__.py  base.py  in_memory.py  long_term.py  manager.py  short_term.py
omnipok_agent/orchestration/: __init__.py  groupchat.py  policies.py  router.py
omnipok_agent/rag/: __init__.py  document.py  embedding.py  knowledge_base.py  loader.py  rag_agent.py  retriever.py  splitter.py  vector_store.py
omnipok_agent/tools/: __init__.py  db.py  http.py  registry.py  search.py
tests/: __init__.py
(+42 files in other folders)
